@@ -306,29 +306,40 @@ argument_list|,
 name|type
 argument_list|)
 decl_stmt|;
+name|totalMaxShare
+operator|=
+operator|(
+name|int
+operator|)
+name|Math
+operator|.
+name|min
+argument_list|(
+operator|(
+name|long
+operator|)
+name|maxShare
+operator|+
+operator|(
+name|long
+operator|)
+name|totalMaxShare
+argument_list|,
+name|Integer
+operator|.
+name|MAX_VALUE
+argument_list|)
+expr_stmt|;
 if|if
 condition|(
-name|maxShare
+name|totalMaxShare
 operator|==
 name|Integer
 operator|.
 name|MAX_VALUE
 condition|)
 block|{
-name|totalMaxShare
-operator|=
-name|Integer
-operator|.
-name|MAX_VALUE
-expr_stmt|;
 break|break;
-block|}
-else|else
-block|{
-name|totalMaxShare
-operator|+=
-name|maxShare
-expr_stmt|;
 block|}
 block|}
 name|int
