@@ -2663,6 +2663,282 @@ block|}
 block|}
 annotation|@
 name|Test
+DECL|method|testFairShareWithMaxResources ()
+specifier|public
+name|void
+name|testFairShareWithMaxResources
+parameter_list|()
+throws|throws
+name|IOException
+block|{
+name|conf
+operator|.
+name|set
+argument_list|(
+name|FairSchedulerConfiguration
+operator|.
+name|ALLOCATION_FILE
+argument_list|,
+name|ALLOC_FILE
+argument_list|)
+expr_stmt|;
+comment|// set queueA and queueB maxResources,
+comment|// the sum of queueA and queueB maxResources is more than
+comment|// Integer.MAX_VALUE.
+name|PrintWriter
+name|out
+init|=
+operator|new
+name|PrintWriter
+argument_list|(
+operator|new
+name|FileWriter
+argument_list|(
+name|ALLOC_FILE
+argument_list|)
+argument_list|)
+decl_stmt|;
+name|out
+operator|.
+name|println
+argument_list|(
+literal|"<?xml version=\"1.0\"?>"
+argument_list|)
+expr_stmt|;
+name|out
+operator|.
+name|println
+argument_list|(
+literal|"<allocations>"
+argument_list|)
+expr_stmt|;
+name|out
+operator|.
+name|println
+argument_list|(
+literal|"<queue name=\"queueA\">"
+argument_list|)
+expr_stmt|;
+name|out
+operator|.
+name|println
+argument_list|(
+literal|"<maxResources>1073741824 mb 1000 vcores</maxResources>"
+argument_list|)
+expr_stmt|;
+name|out
+operator|.
+name|println
+argument_list|(
+literal|"<weight>.25</weight>"
+argument_list|)
+expr_stmt|;
+name|out
+operator|.
+name|println
+argument_list|(
+literal|"</queue>"
+argument_list|)
+expr_stmt|;
+name|out
+operator|.
+name|println
+argument_list|(
+literal|"<queue name=\"queueB\">"
+argument_list|)
+expr_stmt|;
+name|out
+operator|.
+name|println
+argument_list|(
+literal|"<maxResources>1073741824 mb 1000 vcores</maxResources>"
+argument_list|)
+expr_stmt|;
+name|out
+operator|.
+name|println
+argument_list|(
+literal|"<weight>.75</weight>"
+argument_list|)
+expr_stmt|;
+name|out
+operator|.
+name|println
+argument_list|(
+literal|"</queue>"
+argument_list|)
+expr_stmt|;
+name|out
+operator|.
+name|println
+argument_list|(
+literal|"</allocations>"
+argument_list|)
+expr_stmt|;
+name|out
+operator|.
+name|close
+argument_list|()
+expr_stmt|;
+name|scheduler
+operator|.
+name|init
+argument_list|(
+name|conf
+argument_list|)
+expr_stmt|;
+name|scheduler
+operator|.
+name|start
+argument_list|()
+expr_stmt|;
+name|scheduler
+operator|.
+name|reinitialize
+argument_list|(
+name|conf
+argument_list|,
+name|resourceManager
+operator|.
+name|getRMContext
+argument_list|()
+argument_list|)
+expr_stmt|;
+comment|// Add one big node (only care about aggregate capacity)
+name|RMNode
+name|node1
+init|=
+name|MockNodes
+operator|.
+name|newNodeInfo
+argument_list|(
+literal|1
+argument_list|,
+name|Resources
+operator|.
+name|createResource
+argument_list|(
+literal|8
+operator|*
+literal|1024
+argument_list|,
+literal|8
+argument_list|)
+argument_list|,
+literal|1
+argument_list|,
+literal|"127.0.0.1"
+argument_list|)
+decl_stmt|;
+name|NodeAddedSchedulerEvent
+name|nodeEvent1
+init|=
+operator|new
+name|NodeAddedSchedulerEvent
+argument_list|(
+name|node1
+argument_list|)
+decl_stmt|;
+name|scheduler
+operator|.
+name|handle
+argument_list|(
+name|nodeEvent1
+argument_list|)
+expr_stmt|;
+comment|// Queue A wants 1 * 1024.
+name|createSchedulingRequest
+argument_list|(
+literal|1
+operator|*
+literal|1024
+argument_list|,
+literal|"queueA"
+argument_list|,
+literal|"user1"
+argument_list|)
+expr_stmt|;
+comment|// Queue B wants 6 * 1024
+name|createSchedulingRequest
+argument_list|(
+literal|6
+operator|*
+literal|1024
+argument_list|,
+literal|"queueB"
+argument_list|,
+literal|"user1"
+argument_list|)
+expr_stmt|;
+name|scheduler
+operator|.
+name|update
+argument_list|()
+expr_stmt|;
+name|FSLeafQueue
+name|queue
+init|=
+name|scheduler
+operator|.
+name|getQueueManager
+argument_list|()
+operator|.
+name|getLeafQueue
+argument_list|(
+literal|"queueA"
+argument_list|,
+literal|false
+argument_list|)
+decl_stmt|;
+comment|// queueA's weight is 0.25, so its fair share should be 2 * 1024.
+name|assertEquals
+argument_list|(
+literal|2
+operator|*
+literal|1024
+argument_list|,
+name|queue
+operator|.
+name|getFairShare
+argument_list|()
+operator|.
+name|getMemory
+argument_list|()
+argument_list|)
+expr_stmt|;
+comment|// queueB's weight is 0.75, so its fair share should be 6 * 1024.
+name|queue
+operator|=
+name|scheduler
+operator|.
+name|getQueueManager
+argument_list|()
+operator|.
+name|getLeafQueue
+argument_list|(
+literal|"queueB"
+argument_list|,
+literal|false
+argument_list|)
+expr_stmt|;
+name|assertEquals
+argument_list|(
+literal|6
+operator|*
+literal|1024
+argument_list|,
+name|queue
+operator|.
+name|getFairShare
+argument_list|()
+operator|.
+name|getMemory
+argument_list|()
+argument_list|)
+expr_stmt|;
+block|}
+annotation|@
+name|Test
 DECL|method|testFairShareWithZeroWeight ()
 specifier|public
 name|void
